# async-stream-packed

./: Cargo.toml  README.md
demos/async-net/: Cargo.toml
demos/async-net/src/: unionable.rs
demos/async-std/: Cargo.toml
demos/async-std/src/: unionable.rs
demos/smol/: Cargo.toml
demos/smol/src/: unionable.rs  upgradable_with_tls_client.rs
demos/tokio/: Cargo.toml
demos/tokio/src/: unionable.rs
src/: gradable.rs  http.rs  http_tunnel.rs  imap.rs  lib.rs  mail.rs  smtp.rs  syncable_with_context.rs  syncable_with_waker.rs  timeoutable.rs  tls.rs  unionable.rs  upgradable.rs  upgradable_ext.rs
tests/: gradable.rs  gradable_futures_io.rs  gradable_tokio_io.rs  http.rs  http_futures_io.rs  http_tokio_io.rs  http_tunnel_futures_io.rs  http_tunnel_tokio_io.rs  imap_futures_io.rs  imap_tokio_io.rs  mail.rs  mail_futures_io.rs  smtp_futures_io.rs  smtp_tokio_io.rs  syncable_with_context.rs  syncable_with_context_futures_io.rs  syncable_with_context_tokio_io.rs  syncable_with_waker.rs  syncable_with_waker_futures_io.rs  syncable_with_waker_tokio_io.rs  timeoutable.rs  timeoutable_futures_io.rs  tls_futures_io.rs  tls_tokio_io.rs  unionable.rs  unionable_futures_io.rs  unionable_tokio_io.rs  upgradable.rs  upgradable_ext.rs  upgradable_ext_futures_io.rs  upgradable_ext_tokio_io.rs  upgradable_futures_io.rs  upgradable_tokio_io.rs
