[package]
name = "async-stream-packed"
version = "0.1.6"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Asynchronous stream packed."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/async-stream-packed"
homepage = "https://github.com/bk-rs/async-stream-packed"
documentation = "https://docs.rs/async-stream-packed"
keywords = []
categories = ["asynchronous"]
readme = "README.md"

[features]
syncable_with_context = []
syncable_with_waker = ["futures-util"]
unionable = ["either"]
upgradable = ["async-trait"]
upgradable_ext = ["upgradable"]
gradable = ["upgradable"]
tls = []

[dependencies]
futures-io = { version = "0.3", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"], optional = true }
either = { version = "1.5", default-features = false, features = [], optional = true }
async-trait = { version = "0.1", default-features = false, features = [], optional = true }

[dev-dependencies]
futures-lite = { version = "0.1", default-features = false, features = [] }

[workspace]
members = [
    "demos/smol",
]
