[package]
name = "async-stream-packed"
version = "0.2.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Asynchronous stream packed."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/async-stream-packed"
homepage = "https://github.com/bk-rs/async-stream-packed"
documentation = "https://docs.rs/async-stream-packed"
keywords = []
categories = ["asynchronous"]
readme = "README.md"

[features]
futures_io = ["futures-x-io/futures_io"]
tokio_io = ["futures-x-io/tokio_io"]

syncable_with_context = []
syncable_with_waker = ["futures-util/alloc"]
unionable = ["either"]
upgradable = ["async-trait"]
tls = ["upgradable"]
http = ["upgradable", "tls"]
mail = ["upgradable", "tls"]

[dependencies]
cfg-if = { version = "0.1", default-features = false, features = [] }

futures-x-io = { version = "0.1", default-features = false, features = [], optional = true }
futures-util = { version = "0.3", default-features = false, features = [], optional = true }
async-trait = { version = "0.1", default-features = false, features = [], optional = true }
either = { version = "1.5", default-features = false, features = [], optional = true }

[dev-dependencies]
futures-lite = { version = "0.1", default-features = false, features = [] }
async-channel = { version = "1.4", default-features = false, features = [] }

tokio = { version = "0.2", default-features = false, features = ["io-util"] }

[workspace]
members = [
    "demos/async-net",
    "demos/tokio",
]
