[package]
name = "async-stream-packed-demo-async-net"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

[[bin]]
name = "unionable"
path = "src/unionable.rs"

[dependencies]
async-stream-packed = { path = "../..", version = "0.1", features = ["unionable"] }
futures-lite = "0.1"
async-net = "0.1"
async-tls = "0.9"
