[package]
name = "async-stream-packed-demo-async-std"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

[[bin]]
name = "unionable"
path = "src/unionable.rs"

[dependencies]
async-stream-packed = { path = "../..", version = "0.2", features = ["futures_io", "unionable"] }
async-std = { version = "1.6", default-features = false, features = ["default", "attributes"] }
futures-util = { version = "0.3", default-features = false, features = ["io"] }
async-tls = "0.9"
