[package]
name = "async-stream-packed-demo-tokio"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"

[[bin]]
name = "unionable"
path = "src/unionable.rs"

[dependencies]
async-stream-packed = { path = "../..", version = "0.1", features = ["tokio_io", "unionable"] }
tokio = { version = "0.2", default-features = false, features = ["io-util", "net", "macros"] }
tokio-rustls = "0.14"
rustls = "0.18"
webpki = "0.21"
webpki-roots = "0.20"
